--- a/Solution Files/BL/BL.csproj
+++ b/Solution Files/BL/BL.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Item.cs" />
     <Compile Include="ItemRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Stylesheet.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
