--- a/Solution Files/BL.Test/BL.Test.csproj
+++ b/Solution Files/BL.Test/BL.Test.csproj
@@ -47,10 +47,12 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ItemRepositoryTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="XMLTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Files\exporttest.csv">
