--- a/Solution Files/BL.Test/BL.Test.csproj
+++ b/Solution Files/BL.Test/BL.Test.csproj
@@ -48,9 +48,11 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ItemRepositoryTests.cs" />
+    <Compile Include="ItemTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="XMLTests.cs" />
   </ItemGroup>
