--- a/Solution Files/BL.Test/BL.Test.csproj
+++ b/Solution Files/BL.Test/BL.Test.csproj
@@ -54,6 +54,7 @@
     <Compile Include="ItemRepositoryTests.cs" />
     <Compile Include="ItemTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StylesheetTests.cs" />
     <Compile Include="XMLTests.cs" />
   </ItemGroup>
   <ItemGroup>
